# data-collector

./: .gitignore  CMakeLists.txt  collector.cpp  collector.h  event_prototype.cpp  fifo.h  main.cpp  notes.md  regex_prototype.cpp
test/: component.cpp  correctness.cpp
